tests/type-errors/cmp_tuple_not_comparable.arl
archetype cmp_test

variable res : bool = false

entry exec () {
  var l : list<nat> = [];
  res := (1, l) = (1, l)
}
